fix: proposal title wrap in pc

--- a/src/app/dao/[aliasName]/components/ProposalsItem/index.css
+++ b/src/app/dao/[aliasName]/components/ProposalsItem/index.css
@@ -1,5 +1,8 @@
 .proposal-item {
   @apply block lg:flex justify-between border-solid border-[1px] border-Neutral-Divider rounded-lg px-[16px] lg:px-8 py-6 bg-white mb-4;
+  .proposal-item-left {
+    @apply lg:proposal-item-left-width;
+  }
 
   .vote-data-analysis {
     @apply lg:w-[266px] lg:ml-[48px] lg:shrink-0 lg:gap-0 gap-[16px];
